--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "author": "Paul Cowan <paul.cowan@cutting.scot>",
   "license": "ISC",
   "dependencies": {
-    "marked": "^1.2.7",
+    "marked": "^2.0.3",
     "rollup": "^2.35.1",
     "@rollup/pluginutils": "^4.1.0"
   },
@@ -36,5 +36,6 @@
     "assert": "^2.0.0",
     "eslint": "^7.16.0",
     "source-map-support": "^0.5.19"
-  }
+  },
+  "type": "module"
 }
